2007-07-26  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Sam.

        - Updated results as they are affecte by my previous checkin.

        * http/tests/security/cross-frame-access-put-expected.txt:
        * http/tests/security/resources/cross-frame-iframe-for-put-test.html:

2007-07-26  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by.

        - Fixed bot breakage.

        * fast/dom/Window/window-resize.html:

2007-07-26  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Darin, Geoff and Sam.

        - <rdar://problem/5150461> Resizing the window larger than the screen causes no resize.

        - Tests to ensure we resize/move the window out of bounds correctly.

        * fast/dom/Window/window-resize-expected.txt: Added.
        * fast/dom/Window/window-resize.html: Added.
        * mac/leopard/Skipped:

2007-07-26  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Brady.

        - Added leopard-specific results for <rdar://problem/5228256> REGRESSION(Leopard): layout test failures: security/block-test

        * mac/leopard/security: Added.
        * mac/leopard/security/block-test-expected.txt: Added.

2007-07-26  Anders Carlsson  <andersca@apple.com>

        Reviewed by John Sullivan.

        Stop the test from dumping load callbacks as they differ on Tiger and Leopard. 
        This is done by removing the call to dumpResourceLoadCallbacks and moving the test away
        from the "loading" directory.
        
        * http/tests/loading/cached-scripts-expected.txt: Removed.
        * http/tests/loading/cached-scripts.html: Removed.
        * http/tests/loading/resources/cached-scripts-subframe.html: Removed.
        * http/tests/misc/cached-scripts-expected.txt: Copied from http/tests/loading/cached-scripts-expected.txt.
        * http/tests/misc/cached-scripts.html: Copied from http/tests/loading/cached-scripts.html.