@@ -1,0 +1,8 @@
+This test verifies that setting the iframe.src through javascript to # does not add a history item. If the test passes you'll see only one history item.
+
+
+
+============== Back Forward List ==============
+curr->  http://127.0.0.1:8000/navigation/lockedhistory-iframe.html  **nav target**
+            about:blank (in frame "<!--framePath //<!--frame0-->-->")
+===============================================
